--- a/index.html
+++ b/index.html
@@ -6,148 +6,8 @@
     <title>Your Name - CS Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=VT323&display=swap" rel="stylesheet">
-    <style>
-        /* Custom Lofi Styles */
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #232946; /* Deep indigo */
-            color: #eebbc3; /* Soft pink */
-            overflow-x: hidden; /* Prevent horizontal scroll */
-        }
-
-        /* Lofi animated background */
-        .lofi-bg {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            overflow: hidden;
-            background: linear-gradient(45deg, #232946, #121828, #2e1c2b, #4a1f3d);
-            background-size: 400% 400%;
-            animation: gradientBG 25s ease infinite;
-        }
-
-        @keyframes gradientBG {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
-        /* Add a subtle grain effect */
-        .grain-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            pointer-events: none;
-            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-            opacity: 0.05; /* Adjust for desired intensity */
-        }
-
-
-        h1, h2, h3 {
-            font-family: 'VT323', monospace; /* Pixel/Retro font for headers */
-            color: #b8c1ec; /* Lavender blue */
-        }
-
-        .nav-link {
-            font-family: 'VT323', monospace;
-            transition: color 0.3s ease, transform 0.3s ease;
-        }
-        .nav-link:hover {
-            color: #fffffe; /* Bright white */
-            transform: scale(1.1);
-        }
-
-        .card {
-            background-color: rgba(46, 28, 43, 0.7); /* Darker purple, semi-transparent */
-            border: 1px solid #b8c1ec; /* Lavender blue border */
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(184, 193, 236, 0.2);
-        }
-
-        .btn-primary {
-            background-color: #eebbc3; /* Soft pink */
-            color: #232946; /* Deep indigo */
-            font-family: 'VT323', monospace;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-        }
-        .btn-primary:hover {
-            background-color: #b8c1ec; /* Lavender blue */
-            transform: scale(1.05);
-        }
-
-        .form-input {
-            background-color: rgba(18, 24, 40, 0.8); /* Darker base, semi-transparent */
-            border: 1px solid #b8c1ec;
-            color: #eebbc3;
-            font-family: 'Inter', sans-serif;
-        }
-        .form-input::placeholder {
-            color: #b8c1ec;
-            opacity: 0.7;
-        }
-
-        /* Typed text effect */
-        .typed-cursor {
-            display: inline-block;
-            width: 10px; /* Adjust width as needed */
-            height: 1.5em; /* Adjust height based on font size */
-            background-color: #eebbc3; /* Soft pink */
-            animation: blink 0.7s infinite;
-            margin-left: 2px;
-            vertical-align: middle;
-        }
-
-        @keyframes blink {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0; }
-        }
-
-        /* Scrollbar styling for a more lofi feel (Webkit browsers) */
-        ::-webkit-scrollbar {
-            width: 8px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #121828; /* Darker background for track */
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #4a1f3d; /* Muted purple for thumb */
-            border-radius: 4px;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #b8c1ec; /* Lavender blue on hover */
-        }
-
-        /* Section fade-in animation */
-        .fade-in-section {
-            opacity: 0;
-            transform: translateY(20px);
-            transition: opacity 0.8s ease-out, transform 0.8s ease-out;
-        }
-        .fade-in-section.is-visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        /* Simple pixel art style divider */
-        .pixel-divider {
-            height: 5px;
-            background-image: linear-gradient(to right, #b8c1ec 2px, transparent 2px, transparent 4px, #b8c1ec 4px, #b8c1ec 6px, transparent 6px, transparent 8px, #b8c1ec 8px);
-            background-size: 10px 5px;
-            margin: 2rem auto;
-            width: 50%;
-            max-width: 200px;
-        }
-
-    </style>
+     <link rel="stylesheet" href="styles.css">
+     <script src="script.js" defer></script>
 </head>
 <body class="antialiased relative">
     <div class="lofi-bg"></div>
@@ -172,61 +32,62 @@
             <a href="#projects" class="mt-12 btn-primary text-xl py-3 px-8 rounded-lg shadow-md">View My Work</a>
         </section>
 
-        <section id="about" class="py-20 px-6 container mx-auto fade-in-section relative z-10">
-            <h2 class="text-5xl text-center mb-12">About Me</h2>
-            <div class="max-w-3xl mx-auto flex flex-col md:flex-row items-center gap-10">
-                <img src="https://placehold.co/250x250/232946/eebbc3?text=Pixel+Avatar" alt="Your Name" class="rounded-full shadow-xl border-4 border-[#b8c1ec] w-48 h-48 md:w-64 md:h-64 object-cover">
-                <div class="text-lg text-center md:text-left">
-                    <p class="mb-4">
-                        I'm a passionate Computer Science student with a love for creating elegant and efficient solutions.
-                        Currently exploring the worlds of <strong class="text-[#fffffe]">web development, AI, and game design</strong>.
-                    </p>
-                    <p class="mb-4">
-                        When I'm not coding, you can find me lost in a good sci-fi novel, experimenting with pixel art,
-                        or brewing the perfect cup of coffee. I thrive on learning new technologies and collaborating on exciting projects.
-                    </p>
-                    <p>My goal is to leverage technology to build impactful and user-friendly applications.</p>
-                </div>
-            </div>
-            <div class="pixel-divider"></div>
-        </section>
+    <section id="projects" class="py-20 px-6 bg-opacity-50 bg-[#121828] fade-in-section relative z-10">
+  <div class="container mx-auto">
+    <h2 class="text-5xl text-center mb-16">My Projects</h2>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10">
+      
+      <!-- StudentSwap -->
+      <div class="card p-6 rounded-lg shadow-lg">
+        <img src="https://placehold.co/600x400/4a1f3d/eebbc3?text=Project+Alpha" alt="Project Alpha" class="rounded-md mb-4 w-full h-48 object-cover">
+        <h3 class="text-3xl mb-2">StudentSwap</h3>
+        <p class="text-sm mb-3">StudentSwap is a marketplace platform exclusively for university students to buy, sell, or trade items like electronics, furniture, and textbooks. It requires a valid student email to sign-up, ensuring a trusted, campus only community. Its purpose is to make it easier and safer for students to exchange goods locally. It solves the problem of unreliable, general public platforms by creating a student-focused, verified enviorment tailored to campus life.</p>
+        <p class="text-xs mb-4 text-[#b8c1ec]"><strong>Technologies:</strong> HTML, CSS, JavaScript, Node.js, Powershell, Firebase </p>
+        <div class="flex space-x-4">
+          <a href="#" target="_blank" class="btn-primary text-sm py-2 px-4 rounded-md">Live Demo[Work In Progress]</a>
+          <a href="#" target="_blank" class="btn-primary text-sm py-2 px-4 rounded-md">GitHub</a>
+        </div>
+      </div>
 
-        <section id="projects" class="py-20 px-6 bg-opacity-50 bg-[#121828] fade-in-section relative z-10">
-            <div class="container mx-auto">
-                <h2 class="text-5xl text-center mb-16">My Projects</h2>
-                <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10">
-                    <div class="card p-6 rounded-lg shadow-lg">
-                        <img src="https://placehold.co/600x400/4a1f3d/eebbc3?text=Project+Alpha" alt="Project Alpha" class="rounded-md mb-4 w-full h-48 object-cover">
-                        <h3 class="text-3xl mb-2">StudentSwap</h3>
-                        <p class="text-sm mb-3">StudentSwap is a marketplace platform exclusively for university students to buy, sell, or trade items like electronics, furniture, and textbooks.  It requires a valid student email to sign-up, ensuring a trusted, campus only community.  Its purpose is to make it easier and safer for students to exchange goods locally.  It solves the problem of unreliable, general public platforms by creating a student-focused, verified enviorment tailored to campus life.</p>
-                        <p class="text-xs mb-4 text-[#b8c1ec]"><strong>Technologies:</strong> HTML, CSS, JavaScript, Node.js, Powershell, Firebase </p>
-                        <div class="flex space-x-4">
-                            <a href="#" target="_blank" class="btn-primary text-sm py-2 px-4 rounded-md">Live Demo[Work In Progress]</a>
-                            <a href="#" target="_blank" class="btn-primary text-sm py-2 px-4 rounded-md">GitHub</a>
-                        </div>
-                    </div>
-                    <div class="card p-6 rounded-lg shadow-lg">
-                        <img src="https://placehold.co/600x400/2e1c2b/eebbc3?text=Project+Beta" alt="Project Beta" class="rounded-md mb-4 w-full h-48 object-cover">
-                        <h3 class="text-3xl mb-2">20 Questions</h3>
-                        <p class="text-sm mb-3">An innovative solution for task management, built with a focus on user experience and real-time collaboration.</p>
-                        <p class="text-xs mb-4 text-[#b8c1ec]"><strong>Technologies:</strong> React, Node.js, Express, MongoDB</p>
-                        <div class="flex space-x-4">
-                            <a href="#" target="_blank" class="btn-primary text-sm py-2 px-4 rounded-md">Live Demo</a>
-                            <a href="#" target="_blank" class="btn-primary text-sm py-2 px-4 rounded-md">GitHub</a>
-                        </div>
-                    </div>
-                    <div class="card p-6 rounded-lg shadow-lg">
-                        <img src="https://placehold.co/600x400/232946/eebbc3?text=Project+Gamma" alt="Project Gamma" class="rounded-md mb-4 w-full h-48 object-cover">
-                        <h3 class="text-3xl mb-2">Lofi Focus Timer</h3>
-                        <p class="text-sm mb-3">A Pomodoro timer with integrated lofi music player to help users stay focused and relaxed.</p>
-                        <p class="text-xs mb-4 text-[#b8c1ec]"><strong>Technologies:</strong> HTML, CSS, JavaScript, Tone.js (hypothetical)</p>
-                        <div class="flex space-x-4">
-                            <a href="#" target="_blank" class="btn-primary text-sm py-2 px-4 rounded-md">Live Demo</a>
-                            <a href="#" target="_blank" class="btn-primary text-sm py-2 px-4 rounded-md">GitHub</a>
-                        </div>
-                    </div>
-                    </div>
-            </div>
+      <!-- 20 Questions -->
+      <div class="card p-6 rounded-lg shadow-lg">
+        <img src="https://placehold.co/600x400/2e1c2b/eebbc3?text=Project+Beta" alt="Project Beta" class="rounded-md mb-4 w-full h-48 object-cover">
+        <h3 class="text-3xl mb-2">20 Questions</h3>
+        <p class="text-sm mb-3">A web-based twist on the classic guessing game. The app uses a decision tree algorithm to try and guess the object you're thinking of in 20 questions or less. Users can train the AI by submitting new questions and answers.</p>
+        <p class="text-xs mb-4 text-[#b8c1ec]"><strong>Technologies:</strong> JavaScript, Node.js, Express, MongoDB, EJS</p>
+        <div class="flex space-x-4">
+          <a href="#" target="_blank" class="btn-primary text-sm py-2 px-4 rounded-md">Live Demo</a>
+          <a href="#" target="_blank" class="btn-primary text-sm py-2 px-4 rounded-md">GitHub</a>
+        </div>
+      </div>
+
+      <!-- Lofi Focus Timer -->
+      <div class="card p-6 rounded-lg shadow-lg">
+        <img src="https://placehold.co/600x400/232946/eebbc3?text=Project+Gamma" alt="Project Gamma" class="rounded-md mb-4 w-full h-48 object-cover">
+        <h3 class="text-3xl mb-2">Lofi Focus Timer</h3>
+        <p class="text-sm mb-3">A minimalistic productivity app based on the Pomodoro Technique. It features adjustable focus/break intervals and an embedded lofi radio player to help users stay relaxed and productive while working.</p>
+        <p class="text-xs mb-4 text-[#b8c1ec]"><strong>Technologies:</strong> HTML, CSS, JavaScript, Howler.js</p>
+        <div class="flex space-x-4">
+          <a href="#" target="_blank" class="btn-primary text-sm py-2 px-4 rounded-md">Live Demo</a>
+          <a href="#" target="_blank" class="btn-primary text-sm py-2 px-4 rounded-md">GitHub</a>
+        </div>
+      </div>
+
+      <!-- Gameboy Music Player -->
+      <div class="card p-6 rounded-lg shadow-lg">
+        <img src="https://placehold.co/600x400/232946/eebbc3?text=Project+Gamma" alt="Project Gamma" class="rounded-md mb-4 w-full h-48 object-cover">
+        <h3 class="text-3xl mb-2">Gameboy Music Player</h3>
+        <p class="text-sm mb-3">A retro-themed music player inspired by the Gameboy aesthetic. Features a pixel-art UI, chiptune soundtrack library, and keyboard controls that simulate cartridge swapping and play/pause functionality.</p>
+        <p class="text-xs mb-4 text-[#b8c1ec]"><strong>Technologies:</strong> HTML, CSS, JavaScript, Web Audio API, GSAP</p>
+        <div class="flex space-x-4">
+          <a href="#" target="_blank" class="btn-primary text-sm py-2 px-4 rounded-md">Live Demo</a>
+          <a href="#" target="_blank" class="btn-primary text-sm py-2 px-4 rounded-md">GitHub</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
             <div class="pixel-divider"></div>
         </section>
 
@@ -292,8 +153,8 @@
                 <div class="mt-12">
                     <p class="text-xl mb-4">Or find me on:</p>
                     <div class="flex justify-center space-x-6">
-                        <a href="#" target="_blank" class="text-3xl nav-link hover:text-[#fffffe]">GitHub</a>
-                        <a href="#" target="_blank" class="text-3xl nav-link hover:text-[#fffffe]">LinkedIn</a>
+                        <a href="https://github.com/UnseenAssassin" target="_blank" class="text-3xl nav-link hover:text-[#fffffe]">GitHub</a>
+                        <a href="https://www.linkedin.com/in/zuriel-pagan-298b82166/" target="_blank" class="text-3xl nav-link hover:text-[#fffffe]">LinkedIn</a>
                         </div>
                 </div>
             </div>
@@ -304,66 +165,5 @@
         <p>&copy; <span id="currentYear"></span> Zuriel Pagan. All rights reserved.</p>
         <p>Designed with a lofi vibe &hearts;</p>
     </footer>
-
-    <script>
-        // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const targetId = this.getAttribute('href');
-                const targetElement = document.querySelector(targetId);
-                if (targetElement) {
-                    targetElement.scrollIntoView({
-                        behavior: 'smooth'
-                    });
-                }
-            });
-        });
-
-        // Typed text effect for subtitle
-        const typedTextElement = document.getElementById('typed-subtitle');
-        const textToType = "A Computer Science Student & Aspiring Web Developer.";
-        let charIndex = 0;
-
-        function type() {
-            if (charIndex < textToType.length) {
-                typedTextElement.textContent += textToType.charAt(charIndex);
-                charIndex++;
-                setTimeout(type, 100); // Adjust typing speed (milliseconds)
-            }
-        }
-        // Start typing when the page loads
-        document.addEventListener('DOMContentLoaded', type);
-
-
-        // Set current year in footer
-        document.getElementById('currentYear').textContent = new Date().getFullYear();
-
-        // Fade-in sections on scroll
-        const sections = document.querySelectorAll('.fade-in-section');
-        const observerOptions = {
-            root: null, // relative to document viewport
-            rootMargin: '0px',
-            threshold: 0.1 // 10% of item is visible
-        };
-
-        const observer = new IntersectionObserver((entries, observer) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('is-visible');
-                    // Optional: unobserve after it's visible so animation doesn't repeat
-                    // observer.unobserve(entry.target);
-                } else {
-                    // Optional: remove class if you want animation to repeat when scrolling up
-                    // entry.target.classList.remove('is-visible');
-                }
-            });
-        }, observerOptions);
-
-        sections.forEach(section => {
-            observer.observe(section);
-        });
-
-    </script>
 </body>
 </html>
